{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 24,
  "lineage": "36c87d6c-8c3c-da49-3fb8-8a27377ab83e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "Eks_dashapp_dock_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582921950567:security-group/sg-008e3601f6e6c456b",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-008e3601f6e6c456b",
            "name": "Eks_dashapp_dock_sg",
            "tags": {
              "name": "Eks_dashapp_dock_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-77b8c011"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Eks_dashapp_dock_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582921950567:security-group/sg-008e3601f6e6c456b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008e3601f6e6c456b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Eks_dashapp_dock_sg",
            "name_prefix": "",
            "owner_id": "582921950567",
            "revoke_rules_on_delete": null,
            "tags": {
              "name": "Eks_dashapp_dock_sg"
            },
            "tags_all": {
              "name": "Eks_dashapp_dock_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-77b8c011"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}